metadata/force-app/main/default/objects/CustomName_Gzjpl__c/CustomName_Gzjpl__c.object-meta.xml
<CustomObject>
    <description>Description_uLOIW</description>
    <label>CustomLabel_JZsKq</label>
    <nameField>
        <label>CustomLabel_JZsKq</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_JZsKqs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>