metadata/force-app/main/default/objects/CustomName_Gzjpl__c/fields/CustomField_DukVh__c.field-meta.xml
<CustomField>
    <fullName>CustomField_DukVh__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldLZIvY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>